--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,5 +19,6 @@
     <string name="text_label_degree_label">℃</string>
     <string name="fetching_data">Fetching...</string>
     <string name="wrong_input">Wrong Input</string>
+    <string name="text_label_degree">℃</string>
 
 </resources>
