--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,16 +1,11 @@
 <resources>
     <string name="app_name">WeatherApp</string>
     <string name="action_settings">Settings</string>
-    <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
+    <string name="first_fragment_label">Weather Info Fragment</string>
+    <string name="second_fragment_label">User Info Fragment</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
-
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="enter_country_name">Enter Country Name</string>
-
     <string name="search">Search</string>
     <string name="today">Today</string>
     <string name="search_city_weather">Search City Weather</string>
@@ -20,5 +15,4 @@
     <string name="fetching_data">Fetching...</string>
     <string name="wrong_input">Wrong Input</string>
     <string name="text_label_degree">℃</string>
-
 </resources>
